TODO
* libcaes
  - WinXP no AES support ?
  - WINAPI initialize provider only once - where to stick the init functions ?
  - wincrypt and EVP - make sure to pass block sized blocks ?
* check metadata number_of_volume_header_sectors ?
* debug print more volume header info

Optimizations
* pass values 32-bit to aes

Library
* add support for smart card + pin?
* add support for TPM ?

Test suite:
* add test scripts

Release:
* check debug output alignment
* automated tests - test suite
* msvscpp build
* check TODOs

Tools:
* bdeinfo
* bdeexport
* bdemount
  - implement ImDisk version for WINAPI
  - implement native MacOS-X version

Format:
* validation
* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive
* what is entry type 0x000b ?
* why does Windows hide the last 4096 bytes of the volume?

Test images:
* for Windows Vista, Windows 7, To Go

Validate test cases:
* AES 128
* AES 128 diffuser
* AES 256
* AES 256 diffuser
* recovery key
* clear key
* partial encrypted volume
* startup key

20111022
* updated libfdatetime

20111020
* updated README.static
* combined recovery and user password iteration code

20111012
* update for Cygwin static executable support
* update for libfuse detection

20111011
* implemented OSXFuse support

20111009
* updated pc and spec file
* changes to libcaes for WINAPI build
* added password support

20111008
* updated common
* updated libhmac, libsystem, libuna, libfdatetime
* updated msvscpp files

20111007
* updated configure.ac and m4 files

20111003
* worked on libcaes

20111002
* updated configure
* added geteuid and getegid check

20110925
* updated msvscpp files
* fixes for WINAPI build

20110921
* preparations for release
* updated libbfio - added support for device file size
* updated libhmac

20110918
* preparations for release

20110830
* worked on support for startup key

20110829
* worked on support for startup key
* updated configure

20110828
* updated libbfio

20110826