@@ -1,6 +1,6 @@
 dnl Functions for libfdatetime
 dnl
-dnl Version: 20111008
+dnl Version: 20111025
 
 dnl Function to detect if libfdatetime is available
 dnl ac_libfdatetime_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -17,7 +17,8 @@ AC_DEFUN([AX_LIBFDATETIME_CHECK_LIB],
   ])
 
  AS_IF(
-  [test "x$ac_cv_with_libfdatetime" != xno],
+  [test "x$ac_cv_with_libfdatetime" = xno],
+  [ac_cv_libfdatetime=no],
   [dnl Check for headers
   AC_CHECK_HEADERS([libfdatetime.h])
  
